# optscale

./: .dockerignore  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  How-to-use-OptScale-to-optimize-RI-SP-usage.md  LICENSE.md  README.md  Recommendations.md  SECURITY.md  build.sh  coverage.html  coverage.xml  recommendations-s3-duplicate-finder.md  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md
arcee/: .gitignore  .pylintrc  Dockerfile  Dockerfile_tests  justfile  run_test.sh  test-requirements.txt
arcee/optscale_arcee/: LICENSE.txt  README.rst  publish.sh  setup.cfg  tox.ini
arcee/optscale_arcee/examples/: linear_regression.py  requirements.txt  simple.py  torchvision_demo.py
arcee/optscale_arcee/optscale_arcee/: __init__.py  arcee.py  platform.py
arcee/optscale_arcee/optscale_arcee/hw_stat_collector/: collector.py
arcee/optscale_arcee/optscale_arcee/module_collector/: collector.py
arcee/optscale_arcee/optscale_arcee/platforms_meta/: azure.py
arcee/optscale_arcee/optscale_arcee/sender/: sender.py
arcee/optscale_arcee/tests/: test_data.py  test_platform.py
auth/: .noserc  .pylintrc  Dockerfile  Dockerfile_tests  down-revisions-requirements.txt  requirements.txt  run_test.sh  test-requirements.txt
bi_exporter/: .pylintrc  Dockerfile  Dockerfile_tests  requirements.txt  run_test.sh  run_tests.py  test-requirements.txt
bulldozer/: run_test.sh
bumble_bi/: Dockerfile  Dockerfile_tests  docker-compose.yml  requirements.txt  run_tests.py
bumi_scheduler/: Dockerfile  Dockerfile_tests  requirements.txt
diproxy/: .noserc  (+7 more)
(+9853 files in other folders)
