# setup.cfg
[metadata]
name = optscale_arcee
version = 0.1.25
author = Hystax
description = ML profiling tool for OptScale
long_description = file: README.rst
long_description_content_type= text/markdown
url = https://my.optscale.com/
keywords = arcee, ml, optscale, finops, mlops
[options]
python_requires = >=3.7, <4
install_requires =
    aiohttp==3.8.1
    aiofiles==22.1.0
    GPUtil==1.4.0
    psutil==5.9.2
packages = find:
package_dir =
    =.
test =
    tox
[options.packages.find]
exclude =
    tests
